--- a/css/index.css
+++ b/css/index.css
@@ -65,6 +65,7 @@ body {
 
 h1, h2, h3, h4, h5, h6, p, a, i {
     text-decoration: none;
+    color:rgb(225, 239, 230);
 }
 
 h1 {
@@ -87,10 +88,33 @@ p, a {
 header {
     width: 100%;
     height: 100vh;
+    margin:0 auto;
     background-image: url('../img/home-header.jpg');
     background-size: cover;
-    background-position: center;
+    background-position: top;
     background-repeat: no-repeat;
+}
+nav{
+    display:flex;
+    flex-direction:column;
+    background-color:rgb(0, 4, 17, .8);
+    width:100%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+nav .links{
+    display:flex;
+    flex-direction:row;
+    background-color:rgb(0, 4, 17, .8);
+    width:100%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+nav .social{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 50px
 }
 
 /* spacers */
@@ -111,6 +135,33 @@ header {
     height: 100vh;
     text-align: center;
     background-color: rgb(0, 4, 17);
+}
+.gallery .food1{
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 1%;
+    margin-bottom: 2%;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.gallery .food{
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 1%;
+    margin-bottom: 2%;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.gallery .food3{
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 1%;
+    margin-bottom: 2%;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
 
 /* about us section */
