--- a/css/menu.css
+++ b/css/menu.css
@@ -83,7 +83,7 @@ h4 {
 }
 
 p, a {
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 /* header section */
@@ -95,6 +95,7 @@ header {
     background-position: center;
     background-repeat: no-repeat;
 }
+.header
 
 /* spacer */
 .spacer {
