--- a/css/index.css
+++ b/css/index.css
@@ -94,7 +94,7 @@ header {
     background-position: top;
     background-repeat: no-repeat;
 }
-nav{
+.container-header{
     display:flex;
     flex-direction:column;
     background-color:rgb(0, 4, 17, .8);
@@ -102,15 +102,22 @@ nav{
     justify-content: space-evenly;
     align-items: center;
 }
-nav .links{
-    display:flex;
-    flex-direction:row;
+.heading{
+    display: flex;
+    flex-direction: column;
     background-color:rgb(0, 4, 17, .8);
     width:100%;
     justify-content: space-evenly;
     align-items: center;
 }
-nav .social{
+nav{
+    display:flex;
+    flex-direction:row;
+    width:100%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.social{
     display:flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -145,7 +152,7 @@ nav .social{
     flex-direction: row;
     justify-content: space-evenly;
 }
-.gallery .food{
+.gallery .food2{
     margin-left: 10%;
     margin-right: 10%;
     margin-top: 1%;
@@ -240,13 +247,42 @@ nav .social{
 }
 
 /* footer section */
-footer {
+footer{
     width: 100%;
     height: 15vh;
-    padding-top: 2.5vh;
-    font-size: 3rem;
+    background-color:rgb(0, 4, 17);
+}
+.container-footer{
+    display:flex;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
 }
 
+.email{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: center;
+}
+.email p{
+    font-size: 4rem;
+}
+#footer-email{
+    font-size: 3rem;
+    
+}
+#footer-email-btn{
+    font-size: 3rem;
+}
+.copyright{
+    background-color: rgb(0, 4, 17);
+}
+.copyright p{ 
+    font-size: 2rem;
+    background-color: rgb(0, 4, 17);
+    display: flex;
+    justify-content: flex-end;
+    margin: 2%;
+}
 /* mobile media query */
 @media (max-width: 428px) {
     /* header section */
