--- a/css/menu.css
+++ b/css/menu.css
@@ -54,6 +54,7 @@ table {
 html {
     max-width: 1920px;
     min-width: 428px;
+    width: 100%;
     font-size: 62.5%;
 }
 
@@ -64,6 +65,7 @@ body {
 
 h1, h2, h3, h4, h5, h6, p, a, i {
     text-decoration: none;
+    color:rgb(225, 239, 230);
 }
 
 h1 {
@@ -83,30 +85,59 @@ h4 {
 }
 
 p, a {
-    font-size: 2rem;
+    font-size: 3rem;
 }
 
 /* header section */
 header {
     width: 100%;
     height: 100vh;
+    margin:0 auto;
     background-image: url('../img/menu-header.jpg');
     background-size: cover;
-    background-position: center;
+    background-position: top;
     background-repeat: no-repeat;
 }
-.header
+.container-header{
+    display:flex;
+    flex-direction:column;
+    background-color:rgb(0, 4, 17, .8);
+    width:100%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.heading{
+    display: flex;
+    flex-direction: column;
+    background-color:rgb(0, 4, 17, .8);
+    width:100%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+nav{
+    display:flex;
+    flex-direction:row;
+    width:100%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.social{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 50px
+}
 
 /* spacer */
 .spacer {
     width: 100%;
     height: 20vh;
-    background-color: rgb(0, 4, 17);
+    background-color: rgb(0, 4, 17,.8);
 }
 .spacer-sm {
     width: 100%;
     height: 10vh;
-    background-color: rgb(0, 4, 17);
+    background-color: rgb(0, 4, 17,.8);
 }
 
 /* menu */
@@ -115,7 +146,7 @@ header {
     width: 100%;
     height: auto;
     background-image: url('../img/staff-bartender.jpg');
-    background-color: rgb(0, 4, 17);
+    background-color: rgb(0, 4, 17,.8);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -125,10 +156,38 @@ header {
 footer {
     width: 100%;
     height: 15vh;
-    padding-top: 2.5vh;
+    background-color:rgb(0, 4, 17);
+}
+.container-footer{
+    display:flex;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+}
+.email{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: center;
+}
+.email p{
+    font-size: 4rem;
+}
+#footer-email{
+    font-size: 3rem;
+    
+}
+#footer-email-btn{
     font-size: 3rem;
 }
-
+.copyright{
+    background-color: rgb(0, 4, 17);
+}
+.copyright p{ 
+    font-size: 2rem;
+    background-color: rgb(0, 4, 17);
+    display: flex;
+    justify-content: flex-end;
+    margin: 2%;
+}
 /* mobile media query */
 @media (max-width: 428px) {
     /* header section */
